--- a/NFTB.Mobile/NFTB.Mobile/NFTB.Mobile.csproj
+++ b/NFTB.Mobile/NFTB.Mobile/NFTB.Mobile.csproj
@@ -38,20 +38,27 @@
     <Compile Include="API\BaseAPI.cs" />
     <Compile Include="API\Results\Person.cs" />
     <Compile Include="App..cs" />
+    <Compile Include="Data\Entities\AttendanceSummary.cs" />
     <Compile Include="Data\Entities\TermSummary.cs" />
+    <Compile Include="Logic\DataManagers\AttendanceManager.cs" />
     <Compile Include="Logic\DataManagers\TermManager.cs" />
     <Compile Include="Logic\DataManagers\PersonManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\MasterMenuModel.cs" />
     <Compile Include="Models\TermEditorModel.cs" />
     <Compile Include="Models\TermListModel.cs" />
     <Compile Include="Models\TermDetailModel.cs" />
     <Compile Include="Models\PlayerListModel.cs" />
     <Compile Include="Models\BaseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Navigation\MenuPage.xaml.cs">
-      <DependentUpon>MenuPage.xaml</DependentUpon>
+    <Compile Include="UI\Controls\NegateBoolean.cs" />
+    <Compile Include="UI\Navigation\NavigationMenu.xaml.cs">
+      <DependentUpon>NavigationMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Navigation\MasterMenu.xaml.cs">
+      <DependentUpon>MasterMenu.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Content\Styles.xaml.cs">
       <DependentUpon>Styles.xaml</DependentUpon>
@@ -62,8 +69,14 @@
     <Compile Include="UI\Pages\PlayerEditor.xaml.cs">
       <DependentUpon>PlayerEditor.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Pages\AttendanceEditor.xaml.cs">
+      <DependentUpon>AttendanceEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Pages\TermEditor.xaml.cs">
       <DependentUpon>TermEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Pages\TermDetails.xaml.cs">
+      <DependentUpon>TermDetails.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Pages\TermList.xaml.cs">
       <DependentUpon>TermList.xaml</DependentUpon>
@@ -132,7 +145,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="UI\Navigation\MenuPage.xaml">
+    <EmbeddedResource Include="UI\Navigation\MasterMenu.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -157,6 +170,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UI\Pages\TermEditor.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Pages\AttendanceEditor.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Navigation\NavigationMenu.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Pages\TermDetails.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
