--- a/NFTB.Mobile/NFTB.Mobile/NFTB.Mobile.csproj
+++ b/NFTB.Mobile/NFTB.Mobile/NFTB.Mobile.csproj
@@ -41,8 +41,11 @@
     <Compile Include="App..cs" />
     <Compile Include="Common\Extensions\ContentPageExtensions.cs" />
     <Compile Include="Contracts\IContentPage.cs" />
+    <Compile Include="Data\Entities\Token.cs" />
+    <Compile Include="Data\Entities\LoginSummary.cs" />
     <Compile Include="Data\Entities\TermDetailModelResult.cs" />
     <Compile Include="Data\Entities\InvoiceSummary.cs" />
+    <Compile Include="Data\Entities\RegistrationSummary.cs" />
     <Compile Include="Data\Entities\TermSummary.cs" />
     <Compile Include="Data\Entities\PlayerAttendanceSummary.cs" />
     <Compile Include="Data\Entities\AttendanceSummary.cs" />
@@ -50,6 +53,7 @@
     <Compile Include="Data\Entities\PlayerSummary.cs" />
     <Compile Include="Data\Enum\PlayerListFilters.cs" />
     <Compile Include="Logic\DataManagers\AttendanceManager.cs" />
+    <Compile Include="Logic\DataManagers\AccountManager.cs" />
     <Compile Include="Logic\DataManagers\TermManager.cs" />
     <Compile Include="Logic\DataManagers\PlayerManager.cs" />
     <Compile Include="MainPage.xaml.cs">
@@ -59,9 +63,12 @@
     <Compile Include="Models\AttendanceListModel.cs" />
     <Compile Include="Models\MasterMenuModel.cs" />
     <Compile Include="Models\AttendanceEditorModel.cs" />
+    <Compile Include="Models\InvoiceEditorModel.cs" />
     <Compile Include="Models\PlayerEditorModel.cs" />
     <Compile Include="Models\PlayerDetailModel.cs" />
+    <Compile Include="Models\SignInModel.cs" />
     <Compile Include="Models\TermEditorModel.cs" />
+    <Compile Include="Models\RegistrationModel.cs" />
     <Compile Include="Models\TermListModel.cs" />
     <Compile Include="Models\TermDetailModel.cs" />
     <Compile Include="Models\PlayerListModel.cs" />
@@ -83,6 +90,9 @@
     <Compile Include="UI\Pages\AttendanceDetail.xaml.cs">
       <DependentUpon>AttendanceDetail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Pages\InvoiceEditor.xaml.cs">
+      <DependentUpon>InvoiceEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Pages\PlayerEditor.xaml.cs">
       <DependentUpon>PlayerEditor.xaml</DependentUpon>
     </Compile>
@@ -95,11 +105,17 @@
     <Compile Include="UI\Pages\PlayerDetail.xaml.cs">
       <DependentUpon>PlayerDetail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Pages\SignIn.xaml.cs">
+      <DependentUpon>SignIn.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Pages\TermEditor.xaml.cs">
       <DependentUpon>TermEditor.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Pages\TermDetail.xaml.cs">
       <DependentUpon>TermDetail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Pages\Registration.xaml.cs">
+      <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Pages\TermList.xaml.cs">
       <DependentUpon>TermList.xaml</DependentUpon>
@@ -226,6 +242,24 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UI\Pages\PlayerDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Pages\InvoiceEditor.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Pages\Registration.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\Pages\SignIn.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
